Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt Creator
QTCREATORBUG-17805
AutoTest: Adding new qml files to current project ignores this file until forcing full rescan
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Done
Priority:
P2: Important
Fix Version/s:
Qt Creator 4.3.0-beta1
Affects Version/s:
Qt Creator 4.0.0
,
Qt Creator 4.1.0
,
Qt Creator 4.2.0
,
Qt Creator 4.3.0-beta1
Component/s:
Test Integration
Labels:
None
Commits:
b273d7be6a44c5638b75c7726d343c6da4484a38 05e8f34d3eb22030b10190397cdc1e1e080d6267
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Christian Stenger
Reporter:
Christian Stenger
Votes:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
28 Feb '17 13:23
Updated:
09 Mar '17 08:37
Resolved:
09 Mar '17 08:37
Gerrit Reviews
There are no open Gerrit changes
Show
There are 2 closed Gerrit changes
Hide
There are 2 closed Gerrit changes
AutoTest: Ensure that removing and adding qml files is noticed
Gerrit Review:
QmlJS: Allow forced rescan on already known paths
Gerrit Review: